<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Books</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="add_book">Add Book</string>
    <string name="add_review">Add Review</string>
    <string name="vespasianus_iii">Vespasianus III</string>
    <string name="robert_fabri">Robert Fabri</string>
    <string name="todo">TODO</string>
    <string name="cover_of_the_book">Cover of the book</string>
    <string name="add_book_button">Add Book</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="isbn">ISBN</string>
    <string name="summary">Summary</string>
    <string name="my_books">My Books</string>
    <string name="description">Description:</string>
    <string name="authorDetail">Author:</string>
    <string name="titleDetail">Title:</string>
    <string name="reviewname">ReviewName</string>
    <string name="reviewtext">ReviewText</string>
</resources>
